Fixed date-picker button overflow

--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -78,13 +78,16 @@ a.#{$block} {
       }
       &:empty {
         padding: 0;
-        &::before,
+        &::before {
+          margin-right: 0;
+          margin-left: 0;
+          margin-bottom: 1px;
+        }
         &::after {
           margin-right: 0;
           margin-left: 0;
         }
       }
-
       //states
       @include fd-focus();
       @include fd-hover() {
@@ -223,6 +226,8 @@ a.#{$block} {
   }
   //.fd-button--light
   &--light {
+    --fd-forms-height: 34px;
+    --fd-forms-height-compact: 26px;
     --fd-button-border-color: transparent;
     --fd-button-background-color: transparent;
     @include fd-var-color("border-color", transparent);
@@ -232,6 +237,7 @@ a.#{$block} {
       --fd-button-color: var(--fd-color-action-1);
       @include fd-var-color("color", fd-color("action", 1));
       @include fd-var-color("background-color", fd-color("neutral", 1));
+      @include fd-var-color("border-color", fd-color-state("hover","action"),--fd-color-action-hover);
       @include fd-disabled() {
         --fd-button-background-color: transparent;
         --fd-button-color: var(--fd-color-action-1);
